more small changes on modal window project

--- a/Modal Window/index.html
+++ b/Modal Window/index.html
@@ -49,12 +49,12 @@
         <button class="close-modal">&times;</button>
  
         <h1 class="modalHeading">Sign In 💼</h1>
-        <div class="emailInput-Container">
-          <h2 id="emailHeading">Email:</h2>
+        <div class="emailInput-Container_Login">
+          <h2 id="emailHeadingLogin">Email:</h2>
           <input type="email" id="emailInput">
         </div>
-        <div class="passwordInput-Container">
-          <h2 id="passwordHeading">Password (1 - 16 characters):</h2>
+        <div class="passwordInput-Container_Login">
+          <h2 id="passwordHeadingLogin">Password:</h2>
           <input type="password" id="passwordInput">
         </div>
         <button id="BtnLogin">Login</button>
