first steps in the making of the contact us modal window

--- a/Modal Window/index.html
+++ b/Modal Window/index.html
@@ -69,6 +69,35 @@
       <p id="login_Message">Welcome back, Greg! <br>It's good to see you again! 😌</p>
     </div>
 
+
+    <!-- Modal Window for Contact Us -->
+    <div class="modal hidden" id="thirdWindow">
+      <button class="close-modal">&times;</button>
+      <h1 class="modalHeading">Contact Us</h1>
+
+      <div class="upperPart">
+        <div class="emailInput-Container_Login">
+          <h2 id="emailHeadingLogin">Name</h2>
+          <input type="text" id="emailInput">
+        </div>
+        <div class="passwordInput-Container_Login">
+          <h2 id="passwordHeadingLogin">Email</h2>
+          <input type="email" id="passwordInput">
+        </div>
+      </div>
+
+      <div class="passwordInput-Container_Login">
+        <h2 id="passwordHeadingLogin">Message</h2>
+        <input type="text" id="passwordInput">
+      </div>
+
+      <div class="contactButtons">
+        <button id="BtnSendMessage">Send Message</button>
+        <button id="BtnClear">Clear</button>
+      </div>
+    </div>
+
+
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
