added animated button, also made some small changes

--- a/Modal Window/index.html
+++ b/Modal Window/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
-    <h1> <span class="mainHeading">Website Service</span> </h1>
+      <h1>
+        <button class="btn" href="#main" style="width: 500px; height: 150px; font-size: 50px;">
+          Web Services
+        </button>
+      </h1>
       <button class="show-modal" id="signUp">Sign Up</button>
       <button class="show-modal" id="login">Login</button>
       <button class="show-modal" id="emailUs">Email Us</button>
