small changes on the code so that i can see the console on my browser for a different js script

--- a/topics/index.html
+++ b/topics/index.html
@@ -10,6 +10,6 @@
   <body style="background-color: black;"></body>
 
     
-    <script src="this_keyword.js"></script>
+    <script src="functions_vs_arrows.js"></script>
   </body>
 </html>
