--- a/topics/index.html
+++ b/topics/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
     <title>Modal window</title>
   </head>
   <body style="background-color: black;"></body>
 
     
-    <script src="functions_vs_arrows.js"></script>
+    <script src="primitive_objects.js"></script>
   </body>
 </html>
