small changes, so that i can use the browser's console as a console for my js code

--- a/topics/index.html
+++ b/topics/index.html
@@ -9,6 +9,6 @@
   <body style="background-color: black;"></body>
 
     
-    <script src="primitive_objects.js"></script>
+    <script src="destructuring_objects.js"></script>
   </body>
 </html>
