small changes on the script tag

--- a/topics/index.html
+++ b/topics/index.html
@@ -9,6 +9,6 @@
   <body style="background-color: black;"></body>
 
     
-    <script src="rest.js"></script>
+    <script src="nullish_coalescing.js"></script>
   </body>
 </html>
