small changes and corrections on a some lines of code

--- a/topics/index.html
+++ b/topics/index.html
@@ -9,6 +9,6 @@
   <body style="background-color: black;"></body>
 
     
-    <script src="optional_chaining.js"></script>
+    <script src="looping_objects.js"></script>
   </body>
 </html>
