change src attribute on script tag, so that the browser's console can be used as my sets.js javascript code console

--- a/topics/index.html
+++ b/topics/index.html
@@ -9,6 +9,6 @@
   <body style="background-color: black;"></body>
 
     
-    <script src="looping_objects.js"></script>
+    <script src="sets.js"></script>
   </body>
 </html>
