--- a/topics/index.html
+++ b/topics/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Modal window</title>
   </head>
-  <body style="background-color: black;"></body>
-
-    
-    <script src="sets.js"></script>
+  <body style="background-color: black;">
+  <h1 style="color: white; display: flex; flex-direction:column; align-items: center;" id="mainHeading"> Welcome to Data Structures and Modern Operators in JavaScript! </h1></body>    
+    <script src="maps.js"></script>
   </body>
 </html>
