changed src attribute, so that i can use the browser's console as a console for my coding challenge 3 and check whether i complete tasks or not

--- a/topics/index.html
+++ b/topics/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="background-color: black;">
   <h1 style="color: white; display: flex; flex-direction:column; align-items: center;" id="mainHeading"> Welcome to Data Structures and Modern Operators in JavaScript! </h1></body>    
-    <script src="maps_iteration.js"></script>
+    <script src="coding_challenge3.js"></script>
   </body>
 </html>
