moved the heading to the center of the page (height-wise this time), and also changed again the src attribute

--- a/topics/index.html
+++ b/topics/index.html
@@ -7,7 +7,7 @@
     <title>Modal window</title>
   </head>
   <body style="background-color: black;">
-  <h1 style="color: white; display: flex; flex-direction:column; align-items: center;" id="mainHeading"> Welcome to Data Structures and Modern Operators in JavaScript! </h1></body>    
-    <script src="coding_challenge3.js"></script>
+  <h1 style="color: white; display: flex; flex-direction:column; align-items: center; margin-top: 45vh;" id="mainHeading"> Welcome to Data Structures and Modern Operators in JavaScript! </h1></body>    
+    <script src="string1.js"></script>
   </body>
 </html>
